add deletion answer keys

--- a/qual/index.html
+++ b/qual/index.html
@@ -165,7 +165,7 @@
                             <edit
                                 type="deletion"
                                 span="The earliest available history shows that"
-                                answer="1"
+                                answer="2"
                                 explanation="The phrase “The earliest available history shows that” contains information situating the sentence within its historical context."
                             ></edit>
                             <br />
@@ -295,16 +295,25 @@
                 <h2>Quiz</h2>
                 <p>Now it’s your turn! Take a look at these sentences and try to identify and categorize the deletions.</p>
                 <h3 class="mb0">2.1:</h3>
-                <iframe id="deletion_quiz_1" src="quiz_instance.html?original=SIMSREE was named after the then-governor of Bombay, Lord Sydenham of Combe, who was an early proponent in the spread of commerce-based vocational courses in India.
-                &simplified=SIMSREE was named after the governor of Bombay, who was an proponent in the spread of courses in India." width="100%" height="550" class="center db bb b--black-20"></iframe>
-
+                <quiz
+                    id="deletion_quiz_1"
+                    original="SIMSREE was named after the then-governor of Bombay, Lord Sydenham of Combe, who was an early proponent in the spread of commerce-based vocational courses in India."
+                    simplified="SIMSREE was named after the governor of Bombay, who was an proponent in the spread of courses in India."
+                    ></quiz>
                 <h3 class="mb0">2.2:</h3>
-                <iframe id="deletion_quiz_2" src="quiz_instance.html?original=The first of these was the 2008–09 season, in which the team finished 3rd in the Western Conference, with a 50–32 record, and lost in the first round of the playoffs to the eventual champion Los Angeles Lakers.
-                &simplified=The first of these was the 2008–09 season, in which the team finished 3rd in the Western Conference, and lost to the champion Los Angeles Lakers." width="100%" height="550" class="center db bb b--black-20"></iframe>
-                
+                <quiz
+                    id="deletion_quiz_2"
+                    original="The first of these was the 2008–09 season, in which the team finished 3rd in the Western Conference, with a 50–32 record, and lost in the first round of the playoffs to the eventual champion Los Angeles Lakers."
+                    simplified="The first of these was the 2008–09 season, in which the team finished 3rd in the Western Conference, and lost to the champion Los Angeles Lakers."
+                    ></quiz>
                 <h3 class="mb0">2.3:</h3>
-                <iframe id="deletion_quiz_3" src="quiz_instance.html?original=A few animals have chromatic response, changing color in changing environments, either seasonally (ermine, snowshoe hare) or far more rapidly with chromatophores in their integument (the cephalopod family).
-                &simplified=Some animals have 'chromatic responses', they change color depending on what's around them." width="100%" height="550" class="center db"></iframe>
+                <quiz
+                    id="deletion_quiz_3"
+                    original="A few animals have chromatic response, changing color in changing environments, either seasonally (ermine, snowshoe hare) or far more rapidly with chromatophores in their integument (the cephalopod family)."
+                    simplified="A few animals have response, changing color in changing environments, either seasonally or far more rapidly."
+                    ></quiz>
+
+                <div style="margin-bottom: 300px"></div>
             </tab-content>
             <tab-content title="Annotating Insertions">
                 <h1>Annotating Insertions</h1>
