--- a/qual/index.html
+++ b/qual/index.html
@@ -51,7 +51,6 @@
                 <p>Here's a big picture of what we're doing:</p>
                 <img src="./img/overview.png" alt="Big picture of the task" width="1200">
                 <br />
-                <todo>One other idea I had is to add interactives throughout the tutorial. Like selecting whether a span is a hallucination or insertion, selecting the severity of a deletion, etc.</todo>
             </tab-content>
             <tab-content title="Selecting Alignments">
                 <h1>Selecting Alignments</h1>
@@ -140,8 +139,6 @@
                     In the real HIT, we have trained another AI to provide the alignment for you. However, this AI is frequently wrong (it will be wrong for almost every HIT), so please also fix its alignments. Go ahead and try it!
                 </p>
 
-                <todo>Add given alignments</todo>
-
                 <h3 class="mb0">1.3:</h3>
                 <quiz
                     id="span_selection_quiz_3"
@@ -186,7 +183,48 @@
                     </template>
                 </example-sent>
 
-                <todo>Add more examples</todo>
+                <example-sent>
+                    <template #complex-sent>If <ed>unsaturated</ed> air is passed through <ed>a spray of continuously</ed> recirculated water, the <ed>specific</ed> humidity will increase <ed>while the</ed> <ed>dry bulb</ed> temperature decreases.</template>
+                    <template #simple-sent>If air is passed through recirculated water, the humidity will increase temperature decreases.</template>
+                    <template #edit>
+                        <template>
+                            <edit
+                                type="deletion"
+                                span="unsaturated"
+                                answer="3"
+                                explanation="The sentence focuses on 'air' that is specificaly 'unsaturated'. Without this modifier, the purpose of the sentence (likely to distinuish this property between types of air) loses its meaning."
+                            ></edit>
+                            <br />
+                            <edit
+                                type="deletion"
+                                span="a spray of continuously"
+                                answer="2"
+                                explanation="Similar to the above, 'a spray of continuously' is a modifier, however its not central to the meaning of the sentence."
+                            ></edit>
+                            <br />
+                            <edit
+                                type="deletion"
+                                span="specific"
+                                answer="1"
+                                explanation="Again, this modifier isn't central to the meaning: although 'specific' changes the precise definition of humidity, this is a deletion necessary when simplifying the underlying idea communicated by the sentence."
+                            ></edit>
+                            <br />
+                            <edit
+                                type="deletion"
+                                span="while the"
+                                answer="1"
+                                explanation="This simply introduces a grammar error. No information is lost."
+                            ></edit>
+                            <br />
+                            <edit
+                                type="deletion"
+                                span="dry bulb"
+                                answer="2"
+                                explanation="We choose 'dry bulb' as a separate deletion because it is independent in meaning from 'while the'. This deletion removes information, but does NOT introduce a grammar error."
+                            ></edit>
+                        </template>
+                    </template>
+                </example-sent>
 
                 <h2>Rating by Severity</h2>
                 <p>
@@ -380,19 +418,17 @@
                     </template>
                 </example-sent>
                 <example-sent 
-                    explanation="The trivial insertion makes the sentence gramatically correct after another edit changed the tense of the sentence.">
-                    <template #complex-sent>???</template>
-                    <template #simple-sent>???</template>
+                    explanation="The sentence doesn't need the relativizer 'that', but it adds clarity to which family the subject 'cooks' for.">
+                    <template #complex-sent>How big is the family you cook for?</template>
+                    <template #simple-sent>How big is the family <ei>that</ei> you cook for?</template>
                     <template #edit>
                         <edit
                             type="insertion"
                             subtype="trivial"
-                            span="???"
+                            span="that"
                         />
                     </template>
                 </example-sent>
-                <br />
-                <todo>Need a high quality trivial insertion.</todo>
                 <h2>Rating by Severity</h2>
                 <p>Insertions also have a <i>severity</i>, meaning you will rate them on a scale of 1-3 by how helpful or harmful the insertion is. Here's some examples of different severity elaboration edits:</p>
                 <example-sent 
@@ -536,10 +572,20 @@
                 </example-sent>
                 <h2>Quiz</h2>
                 <p>Now it’s your turn! Take a look at these sentences and rate the insertions for type and quality.</p>
-                <iframe id="insertion_quiz_1" src="quiz_instance.html?original=Sanskrit arose in South Asia after its predecessor languages had diffused there from the northwest in the late Bronze Age.
-                &simplified=After the Bronze age, old, parent languages had began travelling into South Asia. From that, Sansckrit arose." width="100%" height="550" class="center db bb b--black-20"></iframe>
-                <iframe id="insertion_quiz_2" src="quiz_instance.html?original=Sanskrit arose in South Asia after its predecessor languages had diffused there from the northwest in the late Bronze Age.
-                &simplified=After the Bronze age, old, parent languages had began travelling into South Asia. || From that, Sansckrit arose." width="100%" height="550" class="center db bb b--black-20"></iframe>
+                <h3 class="mb0">3.1:</h3>
+                <quiz
+                    id="insertion_quiz_1"
+                    original="Chomsky weaves global technological change and the primacy of responsible media with the democratic role of schools and higher education."
+                    simplified="Chomsky, a famous American linguist, weaves global technological and scientific change and the primacy of responsible media that with the democratic role of schools, public schools and higher education in his book “on Mis-Education”."
+                    ></quiz>
+                <h3 class="mb0">3.2:</h3>
+                <quiz
+                    id="insertion_quiz_2"
+                    original="On April 10, 2018, the league announced that Color Rush promotion would be discontinued under the terms of the new Thursday Night Football broadcast contract."
+                    simplified="On Tuesday, April 10, 2018, the NFL football league announced that the Color Rush uniform promotion, where colors were uniform, would be discontinued, or ended, under the terms of the new Thursday Night Football broadcast contract, which is an agreement between two parties."
+                    ></quiz>
+
+                <div style="margin-bottom: 300px"></div>
             </tab-content>
             <tab-content title="Annotating Substitutions">
                 <h1>Annotating Substitutions</h1>
